Adiciona uma classe a nav

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <span></span>
                     </label>
                     <nav>
-                        <ul>
+                        <ul class="menu-cabecalho">
                             <li>
                                 <a class="botao" href="index.html">Inicio</a>
                             </li>
