adiciona botão a marca no header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <div class="cabecalho">
 
-            <h2> SolPower &#x26A1 <br><span> A energia do seu Lar e do seu Negócio</span> </h2>
+            <h2> <a href="index.html">SolPower &#x26A1 </a><br><span> A energia do seu Lar e do seu Negócio</span> </h2>
 
 
             <div class="secao-menu">
