--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
                     <nav>
                         <ul class="menu-cabecalho">
                             <li>
-                                <a href="index.html">Inicio</a>
+                                <a href="#">Inicio</a>
                             </li>
                             <li>
-                                <a href="sobrenos.html">Sobre</a>
+                                <a href="#">Sobre</a>
                             </li>
                             <li>
-                                <a href="nossoservico.html">Serviços</a>
+                                <a href="#">Serviços</a>
                             </li>
 
                             <li>
-                                <a href="clientes.html">Clientes</a>
+                                <a href="#">Clientes</a>
                             </li>
                             <li>
-                                <a href="contato.html">Contato</a>
+                                <a href="#">Contato</a>
                             </li>
                         </ul>
                     </nav>
@@ -239,6 +239,8 @@
             </ul>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
