atualiza href botao simulacao

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <br>
 
                 <div class="botao-simulacao" class="gradiente">
-                    <a href="simulacao.html">Simule Grátis</a>
+                    <a href="#">Simule Grátis</a>
                 </div>
             </div>
             <div class="img-logo">
