refactor:add class js-scroll &  renomeia hrefs menu

--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
                         <span></span>
                     </label>
                     <nav>
-                        <ul class="menu-cabecalho">
+                        <ul class="menu-cabecalho js-scroll">
                             <li>
-                                <a href="#">Inicio</a>
+                                <a href="#inicio">Inicio</a>
                             </li>
                             <li>
-                                <a href="#">Sobre</a>
+                                <a href="#sobre">Sobre</a>
                             </li>
                             <li>
-                                <a href="#">Serviços</a>
+                                <a href="#servicos">Serviços</a>
                             </li>
 
                             <li>
-                                <a href="#">Clientes</a>
+                                <a href="#clientes">Clientes</a>
                             </li>
                             <li>
-                                <a href="#">Contato</a>
+                                <a href="#contato">Contato</a>
                             </li>
                         </ul>
                     </nav>
