refactor: add IDS secoes

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 -->
 
     <main>
-        <div class="container-main">
+        <div class="container-main" id="inicio">
             <div class="conteudo-logo">
                 <h1>O futuro chegou: Dê adeus a conta de luz alta, faça agora sua simulação!</h1>
 
@@ -95,7 +95,7 @@
         <h1>Nossos principais objetivos são:</h1>
     </div>
 
-    <section class="conteudo-objetivos">
+    <section class="conteudo-objetivos" id="sobre">
 
         <div class="cards-objetivos" id="card1">
             <div class="obj"> OBJ1
@@ -203,7 +203,7 @@
  =================
 -->
 
-    <footer class="rodape">
+    <footer class="rodape" id="contato">
 
         <div class="titulo-rodapes">
             <h4>FALE CONOSCO</h4>
