refactor: atualiza class js-scroll & add ID secoes para scroll

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                         <span></span>
                     </label>
                     <nav>
-                        <ul class="menu-cabecalho js-scroll">
+                        <ul class="menu-cabecalho">
                             <li>
-                                <a href="#inicio">Inicio</a>
+                                <a href="#inicio" class="js-scroll">Inicio</a>
                             </li>
                             <li>
-                                <a href="#sobre">Sobre</a>
+                                <a href="#sobre"  class="js-scroll">Sobre</a>
                             </li>
                             <li>
                                 <a href="#servicos">Serviços</a>
@@ -49,7 +49,7 @@
                                 <a href="#clientes">Clientes</a>
                             </li>
                             <li>
-                                <a href="#contato">Contato</a>
+                                <a href="#contato"  class="js-scroll">Contato</a>
                             </li>
                         </ul>
                     </nav>
@@ -64,8 +64,8 @@
  =================
 -->
 
-    <main>
-        <div class="container-main" id="inicio">
+    <main id="inicio">
+        <div class="container-main">
             <div class="conteudo-logo">
                 <h1>O futuro chegou: Dê adeus a conta de luz alta, faça agora sua simulação!</h1>
 
@@ -91,11 +91,11 @@
  =================
 -->
 
-    <div class="titulo-obj">
+    <div class="titulo-obj"  id="sobre">
         <h1>Nossos principais objetivos são:</h1>
     </div>
 
-    <section class="conteudo-objetivos" id="sobre">
+    <section class="conteudo-objetivos">
 
         <div class="cards-objetivos" id="card1">
             <div class="obj"> OBJ1
